<resources>
    <string name="app_name">Covid App</string>
    <string name="astrazeneca_vaccine">AstraZeneca Vaccine</string>


    //AstraZeneca Questions
    <string name="AstraZeneca1">AstraZeneca COVID-19 Vaccine has side effects.</string>
    <string name="AstraZeneca2">Headache is a known side effect of AstraZeneca vaccine.</string>
    <string name="AstraZeneca3">Bleeding is a known side effect of AstraZeneca vaccine.</string>
    <string name="AstraZeneca4">Only one dose of AstraZeneca is required.</string>
    <string name="AstraZeneca5">People under 60 are eligible to take the AstraZeneca vaccine.</string>
    //Pfizer Questions
    <string name="Pfizer1">Breathing difficulty is a known side effects of Pfizer vaccine.</string>
    <string name="Pfizer2">If I experience any of the side effects, I shouldn\’t call for help.</string>
    <string name="Pfizer3">Can Pfizer vaccine make me develop Covid-19?</string>
    <string name="Pfizer4">Children under 12 are eligible to take Pfizer vaccine.</string>
    <string name="Pfizer5">Muscle pains is another side effect of Pfizer vaccine.</string>
    //Sinopharm Questions
    <string name="Sino1">Sinopharm is recommended for people under 18.</string>
    <string name="Sino2">Headache is <b><u>NOT</u></b> a side effect of Sinopharm vaccine.</string>
    <string name="Sino3">Fever is <b><u>NOT</u></b> a side effect of Sinopharm vaccine.</string>
    <string name="Sino4">Sinopharm vaccine could cause pain at the injection site.</string>
    <string name="Sino5">Fatigue is <b><u>NOT</u></b> a side effect of Sinopharm vaccine.</string>

    <string name="true_button">TRUE</string>
    <string name="false_button">FALSE</string>
    <string name="next_button">NEXT</string>
    <string name="form_button_text">Book Vaccine</string>
    <string name="homepage_button_text">Return to homepage!</string>
    <string name="correct_toast">Correct!</string>
    <string name="incorrect_toast">Incorrect!</string>

    <string name="Astra_info">The Oxford–AstraZeneca COVID-19 vaccine, is a viral vector vaccine for prevention of COVID-19.
        Developed by Oxford University and AstraZeneca, it is given by intramuscular injection,
        Studies carried out in 2020 showed that the efficacy of the vaccine is 76.0% at preventing symptomatic COVID-19 beginning at 22 days following the first dose and 81.3% after the second dose.</string>
    <string name="more_info_button">More Info</string>
    <string name="Pfizer_vaccine">Pfizer Vaccine</string>
    <string name="Pfizer_info">
    The Pfizer–BioNTech COVID-19 vaccine, sold under the brand name Comirnaty, is an mRNA-based COVID-19 vaccine developed by the German company BioNTech.
    It is authorized for use in people aged 12 years and older in some jurisdictions and for people 16 years and older in other jurisdictions
</string>
    <string name="sinopharm_vaccine">Sinopharm Vaccine</string>
    <string name="Sinopharm_info">As an inactivated vaccine like CoronaVac and Covaxin, BBIBP-CorV uses a more traditional technology that is similar to the inactivated polio vaccine.
        Initially, a sample of SARS-CoV-2 from China capable of rapid multiplication was used to grow large quantities of the virus using vero cells.</string>
    <string name="Sino_quiz_text">Sinopharm quiz</string>
    <string name="Astra_quiz_text">Astrazeneca Quiz</string>
    <string name="Pfizer_quiz_text">Pfizer Quiz</string>
    <string name="lets_get_vaccinated">Lets get Vaccinated !</string>
    <string name="finish">Homepage</string>
    <string name="name_header">Name:</string>
    <string name="name">Name</string>
    <string name="genderHead">Gender:</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="ageHead">Date of Birth:</string>
    <string name="enter_your_age">YYYY/MM/DD</string>
    <string name="phonenumberHead">Phone Number:</string>
    <string name="enter_your_phone_number">Enter your phone number</string>
    <string name="addressHead">Address:</string>
    <string name="enter_your_address">Enter your address</string>
    <string name="email_address_head">Email Address:</string>
    <string name="enter_your_email">Enter your Email</string>
    <string name="ic_number_Head">IC Number:</string>
    <string name="enter_your_ic_number">Enter your IC number</string>
    <string name="confirm_information">Register</string>
    <string name="AstraMinAge">Astrazeneca is not recommended for people under 18 years old.</string>
    <string name="PfizerMinAge">Pfizer is not recommended for people under 12 years old.</string>
    <string name="SinoMinAge">Sinopharm is not recommended for people under 18 years old.</string>
    <string name="SuccessfulRegistration">You have been successfully registered!</string>


    //Assignment 3 parts
    <string name="acessBtnRegister">Register</string>
    <string name="acessBtnLogin">Login</string>
    <string name="acessBtnGuest">Continue As Guest</string>
    <string name="registration_form_title">Registration Form</string>
    <string name="profilePageTitle">Profile Page</string>
    <string name="usernameTitle">Username:</string>
    <string name="textview">TextView</string>
    <string name="dobHead">Date of Birth:</string>
    <string name="vaccineHead">Vaccine:</string>
    <string name="firstDoseHead">First Dose:</string>
    <string name="secondDoseHead">Second Dose:</string>
    <string name="rUsernameHeader">Username:</string>
    <string name="rPasswordHeader">Password:</string>
    <string name="rConfirmPasswordHeader">Confirm Password:</string>
    <string name="rVaccineHeader">Vaccine:</string>
    <string name="none">None</string>
    <string name="rFirstDoseHeader">First Dose:</string>
    <string name="rSecondDoseHeader">Second Dose:</string>
    <string name="loadingScreenMessage">Welcome To My Vaccine App</string>
    <string name="loginPageMessage">Welcome Back!</string>
    <string name="lLoginBtn">Log In</string>
    <string name="lGuestMessage">If you want to register for your vaccine appointment you will have to log in using your username and password</string>
    <string name="lGuestRegister">Don\'t have an account?</string>
    <string name="lTitle">My Vaccine</string>
    <string name="mProfileBtn">Profile</string>
    <string name="mSignOutBtn">Sign Out</string>
    <string name="mToControlBtn">To Control Center</string>
    <string name="updateTitle">Update User</string>
    <string name="uUsernameHead">Username:</string>
    <string name="uUpdateBtn">Update</string>
    <string name="uIdHead">ID:</string>
    <string name="uRoleHead">Role:</string>
    <string name="uDeleteBtn">Delete</string>
    <string name="uRoleAdmin">Admin</string>
    <string name="uRoleMember">Member</string>
    <string name="rowId">1</string>
    <string name="rowIdHead">ID:</string>
    <string name="rowUsernameHead">Username:</string>
    <string name="rowNameHead">Name:</string>
    <string name="rowDobHead">DOB:</string>
    <string name="rowPhoneHead">Phone:</string>
    <string name="rowRoleHead">Role:</string>
</resources>