<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/AstraZenecaHead"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="24dp"

            android:text="@string/astrazeneca_vaccine" />

        <TextView
            android:id="@+id/Astra_Info"
            android:layout_width="379dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="16dp"
            android:text="@string/Astra_info" />

        <Button
            android:id="@+id/Astra_web"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="8dp"
            android:onClick="AstraWeb"
            android:text="@string/more_info_button" />

        <Button
            android:id="@+id/AstraQuizButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="24dp"
            android:layout_marginRight="24dp"
            android:onClick="AstraQuiz"
            android:text="@string/Astra_quiz_text" />

        <TextView
            android:id="@+id/Pfizer_head"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="24dp"
            android:text="@string/Pfizer_vaccine" />

        <TextView
            android:id="@+id/pfizer_info"
            android:layout_width="379dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="16dp"
            android:text="@string/Pfizer_info" />

        <Button
            android:id="@+id/pfizer_web"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="8dp"
            android:onClick="pfizerWeb"
            android:text="@string/more_info_button" />

        <Button
            android:id="@+id/PfizerQuizButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="24dp"
            android:layout_marginRight="24dp"
            android:onClick="PfizerQuiz"
            android:text="@string/Pfizer_quiz_text" />

        <TextView
            android:id="@+id/sinopharm_head"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="24dp"
            android:text="@string/sinopharm_vaccine" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="379dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/Sinopharm_info" />

        <Button
            android:id="@+id/Sinopharm_web"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="8dp"
            android:onClick="SinopharmWeb"
            android:text="@string/more_info_button" />

        <Button
            android:id="@+id/SinoQuizButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="24dp"
            android:layout_marginRight="24dp"
            android:onClick="SinoQuiz"
            android:text="@string/Sino_quiz_text" />
    </LinearLayout>
</ScrollView>