<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#43ABC9"
    tools:context=".FormActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="381dp"
        android:layout_height="607dp"
        android:background="@drawable/shapes"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/FormTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:fontFamily="@font/alegreya_sans_sc_medium"/>

        <TextView
            android:id="@+id/title_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="24dp"
            android:text="@string/name_header"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/FormTitle"
            android:fontFamily="@font/alegreya_sans_sc_medium"/>

        <EditText
            android:id="@+id/text_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginLeft="24dp"
            android:ems="10"
            android:hint="@string/name"
            android:fontFamily="@font/alegreya_sans_sc_medium"
            android:inputType="textPersonName"
            app:layout_constraintBaseline_toBaselineOf="@+id/title_name"
            app:layout_constraintStart_toEndOf="@+id/title_name" />

        <TextView
            android:id="@+id/title_gender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="24dp"
            android:text="@string/genderHead"
            android:fontFamily="@font/alegreya_sans_sc_medium"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_name" />

        <RadioGroup
            android:id="@+id/radio_gender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="8dp"
            android:checkedButton="@id/rbMale"
            android:orientation="horizontal"
            app:layout_constraintStart_toEndOf="@+id/title_gender"
            app:layout_constraintTop_toBottomOf="@+id/text_name"
            android:fontFamily="@font/alegreya_sans_sc_medium">

            <RadioButton
                android:id="@+id/rbMale"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="24dp"
                android:layout_marginRight="24dp"
                android:checked="false"
                android:text="@string/male" />

            <RadioButton
                android:id="@+id/rbFemale"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/female" />
        </RadioGroup>

        <TextView
            android:id="@+id/title_age"
            android:fontFamily="@font/alegreya_sans_sc_medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="24dp"
            android:text="@string/ageHead"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/radio_gender" />

        <EditText
            android:id="@+id/text_age"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginLeft="24dp"
            android:ems="10"
            android:hint="@string/enter_your_age"
            android:fontFamily="@font/alegreya_sans_sc_medium"
            android:inputType="number"
            app:layout_constraintBaseline_toBaselineOf="@+id/title_age"
            app:layout_constraintStart_toEndOf="@+id/title_age" />

        <TextView
            android:id="@+id/title_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="24dp"
            android:text="@string/phonenumberHead"
            android:fontFamily="@font/alegreya_sans_sc_medium"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_age" />

        <EditText
            android:id="@+id/text_phone"
            android:fontFamily="@font/alegreya_sans_sc_medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginLeft="24dp"
            android:ems="10"
            android:hint="@string/enter_your_phone_number"
            android:inputType="phone"
            app:layout_constraintBaseline_toBaselineOf="@+id/title_phone"
            app:layout_constraintStart_toEndOf="@+id/title_phone" />

        <TextView
            android:id="@+id/title_address"
            android:fontFamily="@font/alegreya_sans_sc_medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="24dp"
            android:text="@string/addressHead"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_phone" />

        <EditText
            android:id="@+id/text_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginLeft="24dp"
            android:ems="10"
            android:hint="@string/enter_your_address"
            android:fontFamily="@font/alegreya_sans_sc_medium"
            android:inputType="textPostalAddress"
            app:layout_constraintBaseline_toBaselineOf="@+id/title_address"
            app:layout_constraintStart_toEndOf="@+id/title_address" />

        <TextView
            android:id="@+id/title_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/alegreya_sans_sc_medium"
            android:text="@string/email_address_head"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_address" />

        <EditText
            android:id="@+id/text_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginLeft="24dp"
            android:ems="10"
            android:hint="@string/enter_your_email"
            android:fontFamily="@font/alegreya_sans_sc_medium"
            android:inputType="textEmailAddress"
            app:layout_constraintBaseline_toBaselineOf="@+id/title_email"
            app:layout_constraintStart_toEndOf="@+id/title_email" />

        <TextView
            android:id="@+id/title_ic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="24dp"
            android:text="@string/ic_number_Head"
            android:fontFamily="@font/alegreya_sans_sc_medium"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_email" />

        <EditText
            android:id="@+id/text_ic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginLeft="24dp"
            android:ems="10"
            android:hint="@string/enter_your_ic_number"
            android:fontFamily="@font/alegreya_sans_sc_medium"
            android:inputType="textPersonName"
            app:layout_constraintBaseline_toBaselineOf="@+id/title_ic"
            app:layout_constraintStart_toEndOf="@+id/title_ic" />

        <Button
            android:id="@+id/button_confirm"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginLeft="24dp"
            android:layout_marginEnd="24dp"
            android:layout_marginRight="24dp"
            android:layout_marginBottom="16dp"
            android:onClick="confirm"
            android:text="@string/confirm_information"
            app:backgroundTint="#35F809"
            app:layout_constraintBottom_toTopOf="@+id/button_home"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/button_home"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginLeft="24dp"
            android:layout_marginEnd="24dp"
            android:layout_marginRight="24dp"
            android:layout_marginBottom="16dp"
            android:onClick="returnHome"
            android:text="@string/homepage_button_text"
            app:backgroundTint="#43ABC9"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>