<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#43ABC9"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".QuizActivity">

    <LinearLayout
        android:layout_width="388dp"
        android:layout_height="256dp"
        android:background="@drawable/shapes"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/question_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="TextView"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:textStyle="bold"
            android:fontFamily="@font/alegreya_sans_sc_medium"/>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/true_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:text="@string/true_button"
                app:backgroundTint="#43ABC9" />

            <Button
                android:id="@+id/false_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:text="@string/false_button"
                app:backgroundTint="#43ABC9" />
        </TableRow>


        <Button
            android:id="@+id/next_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/next_button"
            app:backgroundTint="#43ABC9" />

        <Button
            android:id="@+id/form_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginLeft="24dp"
            android:layout_marginEnd="24dp"
            android:layout_marginRight="24dp"
            android:onClick="bookVaccine"
            android:text="@string/form_button_text"
            app:backgroundTint="#35F809" />

        <Button
            android:id="@+id/homepage_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginLeft="24dp"
            android:layout_marginEnd="24dp"
            android:layout_marginRight="24dp"
            android:onClick="returnHome"
            android:text="@string/homepage_button_text"
            app:backgroundTint="#43ABC9" />
    </LinearLayout>
</LinearLayout>