<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AccessActivity"
    android:background="#43ABC9">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="348dp"
        android:layout_height="611dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.253"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.133">

        <Button
            android:id="@+id/btnRegister"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="100dp"
            android:layout_marginLeft="100dp"
            android:layout_marginBottom="20dp"
            android:onClick="myRegister"
            android:text="@string/acessBtnRegister"
            app:layout_constraintBottom_toTopOf="@+id/btnGuest"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="36dp"
            android:layout_marginLeft="36dp"
            android:layout_marginTop="168dp"
            android:onClick="myLogin"
            android:text="@string/acessBtnLogin"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/IVAcessLogo" />

        <Button
            android:id="@+id/btnGuest"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="80dp"
            android:layout_marginLeft="80dp"
            android:layout_marginBottom="20dp"
            android:onClick="myGuestHome"
            android:text="@string/acessBtnGuest"
            app:layout_constraintBottom_toTopOf="@+id/btnLogin"
            app:layout_constraintStart_toStartOf="parent" />

        <ImageView
            android:id="@+id/IVAcessLogo"
            android:layout_width="320dp"
            android:layout_height="362dp"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/mlogo" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>